--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -29,17 +29,10 @@
     class="w-full hidden sm:flex-grow sm:flex-row-reverse sm:flex sm:items-center sm:w-auto sm:pt-0 relative pr-8 sm:pr-0 bg-gradient-to-r from-primary-400 to-primary-100 sm:bg-transparent rounded-3xl sm:rounded-none sm:bg-gradient-to-r sm:from-transparent sm:to-transparent"
     id="nav-content">
     <div class="nav-links sm:flex">
-      <ul class="list-reset sm:flex justify-end flex-1 items-center">
-        <li class="sm:mr-8 mt-4 font-semibold highlight text-gray-900">
-          <%= link_to "Menu", new_plan_path, class:"text-lg"%>
-        </li>
-        <% if current_user.admin %>
-        <li class="sm:mr-8 mt-4 font-semibold highlight text-gray-900">
-          <%= link_to "A propos", new_recipe_path, class:"text-lg"%>
-          <% end %>
-        </li>
-        <li class="sm:mr-8 mt-4 font-semibold highlight text-gray-900 ">
-          <%= link_to "Profil", user_path(current_user.id), class:"text-lg"%>
+      <ul class="list-reset sm:flex justify-end flex-1 items-center">    
+       
+        <li class="sm:mr-8 mt-4 font-semibold highlight text-gray-700 ">
+          <%= link_to "Tableau de bord", user_path(current_user.id), class:"text-lg"%>
 
         </li>
         <li class="sm:mr-8 mt-4 -mr-3">
@@ -59,7 +52,7 @@
       <ul class="list-reset sm:flex justify-end flex-1 items-center">
 
         <li class="mr-5 mt-4 font-semibold highlight">
-          <%= link_to "Se connecter", new_user_session_path, class:"text-lg"%>
+          <%= link_to "Se connecter", new_user_session_path, class:"text-lg text-gray-700"%>
         </li>
 
         <li class="sm:mr-8 mt-4 -mr-3">
