--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,11 +1,13 @@
 <div class="container mx-auto">
 
   <!--Lead+main img-->
-  <div class="top-page flex flex-row items-center justify-around md:mt-12">
+  <div class="top-page flex flex-row items-center justify-around md:mt-28">
 
     <div class="left-top w-96 flex-wrap text-center md:text-left">
-      <p class="text-xl md:text-3xl lg:text-5xl text-yellow-600 font-bold mb-5">Crée ton menu personnalisé</p>
-      <p class="text-lg md:text-xl lg:text-3xl font-bold mb-5">Parle-nous de toi, on s’occupe de tout !</p>
+      <p class="text-xl md:text-3xl lg:text-5xl tracking-wide	 text-warning font-bold mb-5">Crée ton menu personnalisé
+      </p>
+      <p class="text-lg md:text-xl lg:text-3xl text-gray-700 font-semibold mb-5">Parle-nous de toi et on s’occupe de
+        tout !</p>
       <% if current_user%>
       <%= link_to "Mon espace", current_user, class: "bg-primary-500 text-white active:bg-primary-600 font-bold uppercase text-xs md:text-sm lg:text-base px-6 py-3 rounded-xl shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1", type: "button", style: "transition: all .15s ease" %>
       <% else%>
@@ -21,9 +23,10 @@
   </div>
 
   <!--Timeline-->
-  <div class="my-10 md:my-14 lg:my-24">
+  
+  <div class="my-10 md:my-14 lg:my-24 ">
     <div class="flex flex-wrap justify-center">
-      <p>Renseigne tes informations</p>
+      <p> Parles-nous de toi</p>
     </div>
     <div class="flex justify-center">
       <%= image_tag 'timeline-web.svg', class: "tlweb flex"%>
@@ -31,19 +34,24 @@
     <div class="flex justify-around md:justify-between lg:justify-around  mb-5">
       <p class="md:ml-28 lg:-ml-16 xl:ml-0 2xl:ml-28">Inscris-toi</p>
       <p class="content md:hidden"></p>
-      <p class="md:mr-20 lg:-mr-24 xl:-mr-10 2xl:mr-20">On prépare ton menu !</p>
+      <p class="md:mr-20 lg:-mr-24 xl:-mr-10 2xl:mr-20">Et profite de recettes sur mesure !</p>
     </div>
   </div>
+
+
   <!--presentation start-->
-  <h1 class="text-2xl font-bold text-center my-12 md:my-20">Manger intelligemment n'a jamais aussi facile</h1>
+  <h1 class="text-2xl font-bold  tracking-wide	 text-center my-12 md:my-20">Bien manger n'a jamais été aussi facile !
+  </h1>
   <div class="presentation px-2 py-12 text-gray-700 body-font">
     <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
-      <div class="sm:w-32 sm:h-32 h-20 w-20 sm:mr-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
+      <div
+        class="sm:w-32 sm:h-32 h-20 w-20 sm:mr-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
         <i class="fas fa-heartbeat fa-3x" style="color:red;"></i>
       </div>
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
         <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Prenez-soin de votre santé</h2>
-        <p class="leading-relaxed text-base">Choisissez vos menus en fonction de ce qui s'adapte à votre train de vie.</p>
+        <p class="leading-relaxed text-base">Choisissez vos menus en fonction de ce qui s'adapte à votre train de vie.
+        </p>
       </div>
     </div>
     <div class="flex items-center lg:w-3/5 mx-auto border-b pb-10 mb-10 border-gray-200 sm:flex-row flex-col">
@@ -51,73 +59,80 @@
         <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Plus simple</h2>
         <p class="leading-relaxed text-base">Gagnez du temps en plannifiant vos menus.</p>
       </div>
-      <div class="sm:w-32 sm:order-none order-first sm:h-32 h-20 w-20 sm:ml-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
-        <i class="fas fa-user-clock fa-3x" style="color:green;"></i>                   
+      <div
+        class="sm:w-32 sm:order-none order-first sm:h-32 h-20 w-20 sm:ml-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
+        <i class="fas fa-user-clock fa-3x" style="color:green;"></i>
       </div>
     </div>
     <div class="flex items-center lg:w-3/5 mx-auto sm:flex-row flex-col">
-      <div class="sm:w-32 sm:h-32 h-20 w-20 sm:mr-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
+      <div
+        class="sm:w-32 sm:h-32 h-20 w-20 sm:mr-10 inline-flex items-center justify-center rounded-full bg-teal-100 text-teal-500 flex-shrink-0">
         <i class="fas fa-carrot fa-3x" style="color:orange;"></i>
       </div>
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
         <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Différents régimes</h2>
-        <p class="leading-relaxed text-base">Différents régimes alimentaires sont disponibles en fonction de vos préférences.</p>
+        <p class="leading-relaxed text-base">Différents régimes alimentaires sont disponibles en fonction de vos
+          préférences.</p>
       </div>
     </div>
 
   </div>
-      <!--faq start-->
-      <div class="px-5 py-24 mx-auto text-gray-700">
-        <div class="mb-20 text-center">
-            <h1 class="mb-1 text-2xl font-bold text-center text-gray-800 sm:text-3xl title-font">
-                Questions fréquentes
-            </h1>
-            <p class="mx-auto text-base leading-relaxed xl:w-2/4 lg:w-3/4">
-                Voici les questions que vous pouvez vous poser à propos de <span class="border-b-4 border-yellow-400">Mealories</span>.
-            </p>
-        </div>
-        <div class="flex flex-wrap -mx-2 lg:w-4/5 sm:mx-auto sm:mb-2">
-            <div class="w-full px-4 py-2 lg:w-1/2">
-                <details class="mb-4 bg-gray-100 rounded-md" >
-                    <summary class="px-4 py-2 font-semibold bg-gray-300 rounded-md cursor-pointer focus:outline-none">
-                        Comment ça marche ?
-                    </summary>
-
-                    <p class="px-4 py-2">
-                        Notre application vous propose des menus personnalisés en fonction des informations que vous nous transmettez à travers 70 000 recettes !
-                    </p>
-                </details>
-                <details class="mb-4 bg-gray-100 rounded-md">
-                    <summary class="px-4 py-2 font-semibold bg-gray-300 rounded-md cursor-pointer focus:outline-none">
-                        Est-ce gratuit ?
-                    </summary>
-
-                    <p class="px-4 py-2">
-                        Bien-sûr aucune contre-partie financière n'est demandé, il n'y a actuellement pas de version payant de l'application.
-                    </p>
-                </details>
-            </div>
-            <div class="w-full px-4 py-2 lg:w-1/2">
-                <details class="mb-4 bg-gray-100 rounded-md">
-                    <summary class="px-4 py-2 font-semibold bg-gray-300 rounded-md cursor-pointer focus:outline-none">
-                        Comment sont choisis les produits ?
-                    </summary>
-
-                    <p class="px-4 py-2">
-                        En fonction des données nous utilisons les informations de nutritionnistes pour calculer
-                        des menus adaptés à vos besoins !
-                    </p>
-                </details>
-                <details class="mb-4 bg-gray-100 rounded-md">
-                    <summary class="px-4 py-2 font-semibold bg-gray-300 rounded-md cursor-pointer focus:outline-none">
-                        Est-ce que je peux ajouter ma recette ?
-                    </summary>
-
-                    <p class="px-4 py-2">
-                        Depuis de vos tableau de bord vous pouvez facilement ajouter votre recette en cliquant sur "ajouter ma recette".
-                    </p>
-                </details>
-            </div>
-        </div>
+  <!--faq start-->
+  <div class="px-5 py-24 mx-auto text-gray-700">
+    <div class="mb-20 text-center">
+      <h1 class="mb-1 text-2xl font-bold text-center text-gray-800 sm:text-3xl title-font">
+        Questions fréquentes
+      </h1>
+      <p class="mx-auto text-base leading-relaxed xl:w-2/4 lg:w-3/4">
+        Voici les questions que vous pouvez vous poser à propos de <span
+          class="border-b-4 border-primary-500">Mealories</span>.
+      </p>
     </div>
+    <div class="flex flex-wrap -mx-2 lg:w-4/5 sm:mx-auto sm:mb-2">
+      <div class="w-full px-4 py-2 lg:w-1/2">
+        <details class="mb-4 bg-gray-100 rounded-md">
+          <summary class="px-4 py-2 font-semibold bg-gray-100 rounded-md cursor-pointer focus:outline-none">
+            Comment ça marche ?
+          </summary>
+
+          <p class="px-4 py-2 bg-white">
+            Notre application vous propose des menus personnalisés en fonction des informations que vous nous
+            transmettez à travers 70 000 recettes !
+          </p>
+        </details>
+        <details class="mb-4 bg-gray-100 rounded-md">
+          <summary class="px-4 py-2 font-semibold bg-gray-100 rounded-md cursor-pointer focus:outline-none">
+            Est-ce gratuit ?
+          </summary>
+
+          <p class="px-4 py-2 bg-white">
+            Bien-sûr aucune contre-partie financière n'est demandé, il n'y a actuellement pas de version payant de
+            l'application.
+          </p>
+        </details>
+      </div>
+      <div class="w-full px-4 py-2 lg:w-1/2">
+        <details class="mb-4 bg-gray-100 rounded-md">
+          <summary class="px-4 py-2 font-semibold bg-gray-100 rounded-md cursor-pointer focus:outline-none">
+            Comment sont choisis les produits ?
+          </summary>
+
+          <p class="px-4 py-2 bg-white">
+            En fonction des données nous utilisons les informations de nutritionnistes pour calculer
+            des menus adaptés à vos besoins !
+          </p>
+        </details>
+        <details class="mb-4 bg-gray-100 rounded-md">
+          <summary class="px-4 py-2 font-semibold bg-gray-100 rounded-md cursor-pointer focus:outline-none">
+            Est-ce que je peux ajouter ma recette ?
+          </summary>
+
+          <p class="px-4 py-2 bg-white">
+            Depuis de vos tableau de bord vous pouvez facilement ajouter votre recette en cliquant sur "ajouter ma
+            recette".
+          </p>
+        </details>
+      </div>
+    </div>
+  </div>
 </div>
