--- a/app/views/users/users/_form.html.erb
+++ b/app/views/users/users/_form.html.erb
@@ -5,7 +5,7 @@
     <div class="md:grid md:grid-cols-3 md:gap-6 mx-3 my-3 py-8 bg-gray-100 rounded-2xl shadow-xl">
       <div class="md:col-span-1">
         <h3 class="text-lg ml-3 mt-2 font-medium leading-6 text-gray-900">Tes informations</h3>
-        <p class="mt-5 ml-3 text-sm text-gray-500 text-justify">
+        <p class="mt-5 mb-3 ml-3 text-sm text-gray-500 text-justify">
           Ces informations nous permettront de choisir pour toi les recettes les plus adaptées !
         </p>
         <%= image_tag 'personal_data_' %>
@@ -13,25 +13,19 @@
 
       <div class="mt-5 md:mt-0 md:col-span-2 mx-8 mb-15">
         <%= form_with(model: @user, method: "put") do |f| %>
-        <div class="grid grid-cols-3 gap-6">
-          <div class="col-span-3 sm:col-span-2">
-            <div class="radio-buttons">
-              <ul class="flex flex-row justify-center">
-                <li class="mx-4">
-                  <%= radio_button_tag(:gender, "Homme") %>
-                  <%= label_tag(:gender, "Je suis un homme") %>
-                </li>
-                <li class="mx-4">
-                  <%= radio_button_tag(:gender, "Femme") %>
-                  <%= label_tag(:gender, "Je suis une femme") %>
-                </li>
-              </ul>
+        <div class="input-group js-input-group">
+          <div class="input-container ic1">
+            <div class="grid grid-cols-3 gap-6">
+              <div class="col-span-3 sm:col-span-2">
+                <%= f.select :gender, [["Homme"],["Femme"]], { required: true } , { class:"mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-primary-500 focus:border-primary-500 sm:text-sm rounded-md" } %>
+              </div>
             </div>
+
           </div>
         </div>
         <div class="input-group js-input-group">
           <div class="input-container ic1">
-            <%= f.number_field :age, in: 7..120, placeholder: '', value: nil, required: true, class:"input form-control js-form-control" %>
+            <%= f.number_field :age, in: 7..120, placeholder: '', value: current_user.age, required: true, class:"input form-control js-form-control" %>
             <div class="cut cut-short bg-gray-100"></div>
             <label for="age" class="placeholder">Age</>
           </div>
@@ -39,7 +33,7 @@
 
         <div class="input-group js-input-group">
           <div class="input-container ic1">
-            <%= f.number_field :weight_in_kgs, in: 30..220, placeholder: '', value: nil, required: true, class:"input form-control js-form-control" %>
+            <%= f.number_field :weight_in_kgs, in: 30..220, placeholder: '', value: current_user.weight_in_kgs, required: true, class:"input form-control js-form-control" %>
             <div class="cut cut-large bg-gray-100"></div>
             <label for="weight_in_kgs" class="placeholder">Poids en kg</>
           </div>
@@ -47,7 +41,7 @@
 
         <div class="input-group js-input-group">
           <div class="input-container ic1">
-            <%= f.number_field :height_in_cms, in: 80..250, placeholder: '', value: nil, required: true, class:"input form-control js-form-control" %>
+            <%= f.number_field :height_in_cms, in: 80..250, placeholder: '', value: current_user.height_in_cms, required: true, class:"input form-control js-form-control" %>
             <div class="cut cut-large bg-gray-100"></div>
             <label for="height_in_cms" class="placeholder">Taille en cm</>
           </div>
@@ -56,7 +50,7 @@
           <%= f.select :objective, [["Je veux perdre du poids", "1"],["Je veux garder la ligne", "2"], ["Je veux prendre du poids", "3"]], { required: true } , { class:"mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-primary-500 focus:border-primary-500 sm:text-sm rounded-md" } %>
         </div>
         <div class="my-5">
-          <%= f.select :activity_level, [["Travail sédendaire + pas de sport", "1"],['Sport léger 1 à 3 fois par semaine', "2"], ['Sport modéré 3 à 5 fois par semaine', "3"], ['Activité sportive presque quotidienne', "4"], ['Métier exigeant + sport intense', "5"]], { required: true } , { class:"mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-primary-500 focus:border-primary-500 sm:text-sm rounded-md" } %>
+          <%= f.select :activity_level, [["Travail sédendaire et pas de sport", "1"],['Sport léger 1 à 3 fois par semaine', "2"], ['Sport modéré 3 à 5 fois par semaine', "3"], ['Activité sportive presque quotidienne', "4"], ['Métier exigeant  sport intense', "5"]], { required: true } , { class:"mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-primary-500 focus:border-primary-500 sm:text-sm rounded-md" } %>
         </div>
         <%= f.submit "Valider", class:"submit" %>
 
