--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,7 +36,7 @@
 
         </li>
         <li class="sm:mr-8 mt-4 -mr-3">
-          <%= link_to "Déconnexion", destroy_user_session_path, method: "delete", class:"submit font-semibold py-2 px-4 ml-2 mt-2" %>
+          <%= link_to "Déconnexion", destroy_user_session_path, method: "delete", class:"submit font-semibold py-2 px-4 ml-2 mt-2 -mb-1" %>
         </li>
       </ul>
     </div>
@@ -56,7 +56,7 @@
         </li>
 
         <li class="sm:mr-8 mt-4 -mr-3">
-          <%= link_to "Inscription", new_user_registration_path, class:"submit font-semibold py-2 px-4 ml-2 mt-2" %>
+          <%= link_to "Inscription", new_user_registration_path, class:"submit font-semibold py-2 px-4 ml-2 mt-2 -mb-1" %>
         </li>
       </ul>
     </div>
