--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -149,8 +149,8 @@
             <div class="rounded-lg h-96">
               <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
                 <% unless current_user.plans.nil? %>
-                <h1 class="text-2xl -ml-8 font-semibold text-gray-800 mb-5">Ton dernier <span
-                    class="text-primary-800">programme</span> du <%= @plan.created_at.strftime("%d-%m-%Y") %> : </p>
+                <h1 class="text-xl -ml-8 font-semibold text-gray-700 mb-5">Ton dernier <span
+                    class="text-primary-800 text-2xl mx-2">programme</span> du <%= @plan.created_at.strftime("%d-%m-%Y") %> : </p>
                 </h1>
                 <%= render 'users/plans/show'%>
                 <% end %>
