--- a/app/views/users/users/_sidebar.html.erb
+++ b/app/views/users/users/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="flex shrink-1 md:flex-shrink-0">
 
-  <div class="flex flex-col w-64">
+  <div class="flex flex-col w-40 md:w-48 lg:w-64">
 
     <div class="flex flex-col flex-grow border-r border-gray-200 pt-5 pb-4  overflow-y-auto">
 
