--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -43,8 +43,8 @@
                   </svg>
                 </div>
                 <div
-                  class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
-                  <div class="flex-1 px-4 py-2 text-sm truncate"> 
+                  class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md flex-no-wrap">
+                  <div class="flex-1 px-4 py-2 text-sm flex-no-wrap"> 
                    <p class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.daily_cal %> kcal</p>                  
                     <p class="text-gray-500">Tes besoins par jour</p>
                   </div>
@@ -66,8 +66,8 @@
                   </svg>
                 </div>
                 <div
-                  class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
-                  <div class="flex-1 px-4 py-2 text-sm truncate">
+                  class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md flex-no-wrap">
+                  <div class="flex-1 px-4 py-2 text-sm flex-no-wrap">
                     <p class="text-gray-900 font-medium hover:text-gray-600">IMC <%= current_user.bmi %></p>
                     <p class="text-gray-500"><%=current_user.bmi_text%></p>
                   </div>
@@ -98,8 +98,8 @@
                   </svg>
                 </div>
                 <div
-                  class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
-                  <div class="flex-1 px-4 py-2 text-sm truncate">
+                  class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md flex-no-wrap">
+                  <div class="flex-1 px-4 py-2 text-sm flex-no-wrap">
                     <p class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.objective_title %></p>
                     <p class="text-gray-500">L'objectif que tu t'es fixé</p>
                   </div>
@@ -132,8 +132,8 @@
                   </svg>
                 </div>
                 <div
-                  class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
-                  <div class="flex-1 px-4 py-2 text-sm truncate">
+                  class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md flex-no-wrap">
+                  <div class="flex-1 px-4 py-2 text-sm flex-no-wrap">
                     <p class="text-gray-900 font-medium hover:text-gray-600"><%= current_user.activity_level_card %></p>
                     <p class="text-gray-500">Ton activité physique</p>
                   </div>
