--- a/app/views/users/days/_show.html.erb
+++ b/app/views/users/days/_show.html.erb
@@ -1,6 +1,6 @@
 <% if @day != nil %>
   
-  <div class="card">
+  <div class="card mb-4 md:mb-0">
     <div class=" bg-gray-50 w-80 mr-5 hover:shadow-lg shadow-2-xl rounded">
           <%= image_tag @day.lunch.image_url, style: 'height:100%;width:100%;margin-bottom:20px; border-radius:5px;' %>
       <div class=" py-4 px-3">
