--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -3,7 +3,7 @@
   <!--Lead+main img-->
   <div class="top-page flex flex-row items-center justify-around md:mt-28">
 
-    <div class="left-top w-96 flex-wrap text-center md:text-left">
+    <div class="animate__animated animate__fadeInLeft left-top w-96 flex-wrap text-center md:text-left">
       <p class="text-xl md:text-3xl lg:text-5xl tracking-wide	 text-warning font-bold mb-5">Crée ton menu personnalisé
       </p>
       <p class="text-lg md:text-xl lg:text-3xl text-gray-700 font-semibold mb-5">Parle-nous de toi et on s’occupe de
@@ -17,27 +17,25 @@
 
     </div>
 
-    <div class="right-page">
+    <div class="animate__animated animate__fadeInRight right-page">
       <%= image_tag 'chef.svg', class: "chief lg:mt-24"%>
     </div>
   </div>
 
   <!--Timeline-->
-
-  <div class="my-10 md:my-14 lg:my-24 ">
-    <div class="flex flex-wrap justify-center">
-      <p> Parles-nous de toi</p>
+    <div data-aos="fade-up" class=" my-10 md:my-14 lg:my-24 ">
+      <div class="flex flex-wrap justify-center">
+        <p> Parles-nous de toi</p>
+      </div>
+      <div class="flex justify-center">
+        <%= image_tag 'timeline-web.svg', class: "tlweb flex"%>
+      </div>
+      <div class="flex justify-around md:justify-between lg:justify-around  mb-5">
+        <p class="md:ml-28 lg:-ml-16 xl:ml-0 2xl:ml-40">Inscris-toi</p>
+        <p class="content md:hidden"></p>
+        <p class="md:mr-20 lg:-mr-24 xl:-mr-10 2xl:mr-20">Et profite de recettes sur mesure !</p>
+      </div>
     </div>
-    <div class="flex justify-center">
-      <%= image_tag 'timeline-web.svg', class: "tlweb flex"%>
-    </div>
-    <div class="flex justify-around md:justify-between lg:justify-around  mb-5">
-      <p class="md:ml-28 lg:-ml-16 xl:ml-0 2xl:ml-40">Inscris-toi</p>
-      <p class="content md:hidden"></p>
-      <p class="md:mr-20 lg:-mr-24 xl:-mr-10 2xl:mr-20">Et profite de recettes sur mesure !</p>
-    </div>
-  </div>
-
 
   <!--presentation start-->
   <h1 class="text-2xl font-bold  tracking-wide	 text-center my-12 md:my-20">Bien manger n'a jamais été aussi facile !
@@ -79,7 +77,7 @@
   </div>
 
   <!--faq start-->
-  <div class="px-5 py-24 mx-auto text-gray-700">
+  <div data-aos="fade-up" class="px-5 py-24 mx-auto text-gray-700">
     <div class="mb-20 text-center">
       <h1 class="mb-1 text-2xl font-bold text-center text-gray-800 sm:text-3xl title-font">
         Questions fréquentes
