--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer class="text-gray-700 body-font bg-primary-500">
   <div class="container px-5 py-2 md:py-4 mx-auto flex items-center sm:flex-row flex-col">
-    <a class="flex title-font font-semibold items-center md:justify-start justify-center text-gray-700">
+    <div class="flex title-font font-semibold items-center md:justify-start justify-center text-gray-700">
     <%= image_tag("logofooter.svg", size: "48x48") %>
       <span class="ml-3 font-semibold text-xl text-white mr-1">Meal</span><span class="mt-1">ories</span>
-    </a>
-    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 with <span style="color:red"><i class="fas fa-heart"></i></span> by les Perruches
+    </div>
+    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-6 -mb-1">© 2020 with <span style="color:red"><i class="fas fa-heart"></i></span> by les Perruches
     </p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
       <a href="https://github.com/martinmoradi/mealories" target="_blank" class="flex flex-col w-12 h-12 focus:outline-none rounded-lg text-white text-xs self-center m-2 py-1 opacity-2">
