--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -23,14 +23,16 @@
 
 
 
-  <h1 data-aos="fade-up" class="text-lg md:text-xl lg:text-2xl text-gray-700 font-semibold mb-5 text-center my-12 md:my-20">Bien manger n'a jamais été aussi facile !</h1>
+  <h1 data-aos="fade-up"
+    class="text-lg md:text-xl lg:text-2xl text-gray-700 font-semibold mb-5 text-center my-12 md:my-20">Bien manger n'a
+    jamais été aussi facile !</h1>
 
   <!--Timeline-->
-    <div data-aos="fade-up" class=" my-10 md:my-14 lg:my-24 ">
-      <div class="flex justify-center">
-        <%= image_tag 'timeline-web.svg', class: "tlweb flex"%>
-      </div>
+  <div data-aos="fade-up" class=" my-10 md:my-14 lg:my-24 ">
+    <div class="flex justify-center">
+      <%= image_tag 'timeline-web.svg', class: "tlweb flex"%>
     </div>
+  </div>
 
   <!--presentation start-->
   <div class="presentation px-2 py-12 text-gray-700 body-font">
@@ -41,7 +43,8 @@
       </div>
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
         <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Prends-soin de ta santé</h2>
-        <p class="leading-relaxed text-base">Manges mieux en laissant nos algorithmes choisir tes repas en fonction de tes informations.
+        <p class="leading-relaxed text-base">Manges mieux en laissant nos algorithmes choisir tes repas en fonction de
+          tes informations.
         </p>
       </div>
     </div>
@@ -63,63 +66,65 @@
       <div class="flex-grow sm:text-left text-center mt-6 sm:mt-0">
         <h2 class="text-gray-900 text-lg title-font font-medium mb-2">Différents régimes</h2>
         <p class="leading-relaxed text-base">Différents régimes alimentaires sont disponibles en fonction de tes
-         objectifs.</p>
+          objectifs.</p>
       </div>
     </div>
 
   </div>
 
-  <!--faq start--> 
+  <!--faq start-->
 
 
-<div data-aos="fade-up">
-  <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-20 lg:px-8">
-    <div class="lg:grid lg:grid-cols-3 lg:gap-8">
-      <div>
-        <h2 class="text-3xl font-bold text-gray-700">
-          Questions fréquentes
-        </h2>
-        <p class="mt-4 text-lg text-gray-500">Parce que t'hésites encore ? </p>
-         <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Contacte-nous !</a>
-      </div>
-      <div class="mt-12 lg:mt-0 lg:col-span-2">
-        <dl class="space-y-12">
-          <div>
-            <dt class="text-lg leading-6 font-medium text-gray-900">
-             Comment ça marche ?
-            </dt>
-            <dd class="mt-2 text-base text-gray-500">
-               Nos supers algorithmes de la mort qui tue &copy; sont capables d'analyser les recettes et de calculer une journée de repas adaptée à tes besoins.
-            </dd>
-          </div>
+  <div data-aos="fade-up">
+    <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-20 lg:px-8">
+      <div class="lg:grid lg:grid-cols-3 lg:gap-8">
+        <div>
+          <h2 class="text-3xl font-bold text-gray-700">
+            Questions fréquentes
+          </h2>
+          <p class="mt-4 text-lg text-gray-500">Parce que t'hésites encore ? </p>
+          <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Contacte-nous !</a>
+        </div>
+        <div class="mt-12 lg:mt-0 lg:col-span-2">
+          <dl class="space-y-12">
+            <div>
+              <dt class="text-lg leading-6 font-medium text-gray-900">
+                Comment ça marche ?
+              </dt>
+              <dd class="mt-2 text-base text-gray-500">
+                Nos supers algorithmes de la mort qui tue &copy; sont capables d'extraire les informations nutritionnelles de recettes et de générer
+                une journée de repas adaptée à tes besoins.
+              </dd>
+            </div>
 
-          <div>
-            <dt class="text-lg leading-6 font-medium text-gray-900">
-              Est-ce gratuit ?
-            </dt>
-            <dd class="mt-2 text-base text-gray-500">
-              Oui !
-            </dd>
-          </div>
+            <div>
+              <dt class="text-lg leading-6 font-medium text-gray-900">
+                Est-ce gratuit ?
+              </dt>
+              <dd class="mt-2 text-base text-gray-500">
+                Oui !
+              </dd>
+            </div>
 
-          <div>
-            <dt class="text-lg leading-6 font-medium text-gray-900">
-             Comment sont calculées mes journées ?
-            </dt>
-            <dd class="mt-2 text-base text-gray-500">
-             Nous utilisons des formules issues de la recherche pour tous nos algorithmes, nous avons simplement besoin de connaître ton âge, ton poids et ta taille !
-            </dd>
-          </div>
+            <div>
+              <dt class="text-lg leading-6 font-medium text-gray-900">
+                Comment sont calculées mes journées ?
+              </dt>
+              <dd class="mt-2 text-base text-gray-500">
+                Nous utilisons des formules issues de la recherche pour tous nos algorithmes, nous avons simplement
+                besoin de connaître, en plus de tes objectifs, ton âge, ton poids et ta taille !
+              </dd>
+            </div>
 
-          <div>
-            <dt class="text-lg leading-6 font-medium text-gray-900">
-              Est-ce que je peux ajouter ma recette ?
-            </dt>
-            <dd class="mt-2 text-base text-gray-500">
-  Nous travaillons très dûr pour incorporer cette possibilité dans un futur très proche !            </dd>
-          </div>
-        </dl>
-      </div>
+            <div>
+              <dt class="text-lg leading-6 font-medium text-gray-900">
+                Est-ce que je peux ajouter ma recette ?
+              </dt>
+              <dd class="mt-2 text-base text-gray-500">
+                Nous travaillons très dûr pour incorporer cette possibilité dans un futur très proche ! </dd>
+            </div>
+          </dl>
+        </div>
       </div>
     </div>
   </div>
@@ -145,5 +150,5 @@
 
 
 
-  </div>
+</div>
 </div>
