--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -14,8 +14,8 @@
         <!-- Content -->
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <div class="mt-12">
-            <h1 class="text-2xl -mt-8 font-semibold text-gray-700 mb-5">Bonjour <span
-                class="text-primary-800 text-3xl ml-1s "><%= current_user.first_name %></span> !</h1>
+            <h1 class="text-2xl -mt-8 font-semibold text-gray-700 mb-5">Bonjour 
+            <span class="text-primary-800 text-3xl ml-1s"> <%= current_user.first_name %></span> !</h1>
 
             <h2 class="text-base text-gray-500 "> Ton récap santé : </h2>
             <ul class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-4">
