--- a/app/views/users/users/_sidebar.html.erb
+++ b/app/views/users/users/_sidebar.html.erb
@@ -119,7 +119,7 @@
 
           <% if current_user.admin %>
           <hr>
-          <a href="<%=admins_admin_path(current_user.id)%>"
+          <a href="<%=admin_path(current_user.id)%>"
             class="text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md">
             <!-- Heroicon name: chart-bar -->
             <svg class="text-gray-400 group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
@@ -130,7 +130,7 @@
             Admin dashboard
           </a>
 
-          <%= link_to new_admins_recipe_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
+          <%= link_to new_recipe_path, class:"text-gray-600 hover:bg-primary-800 hover:text-white group flex items-center px-2 py-2 text-sm font-medium rounded-md" do %>
           <svg class="fill-current group-hover:text-white mr-3 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 80" x="0px" y="0px">
             <title>Recipe, cooking, book, kitchen, menu, </title>
